vpc_flow_log/lab/vpc_config.tf
resource "aws_vpc" "ucsf-vpc" {
  cidr_block = "${var.vpc_cidr}"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags {
    Name = "ucsf-vpc"
  }
}
